--- a/web-dacpac/index.html
+++ b/web-dacpac/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="DacPac &#8212; De Alta Capacidad Para Alta Capacidad" />
+    <meta property="og:description"
+      content="¿Tu hijo/a tiene Altas Capacidades? ¡Entonces este es el mejor campamento de verano para el/ella !" />
+    <meta property="og:url" content="DacPac" />
+    <meta property="og:site_name" content="DacPac" />
     <title>DacPac</title>
   </head>
   <body>
